--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,13 @@
               <a class="nav-link" href="#" data-th-href="@{/home}">Home</a>
             </li>
              <li class="nav-item px-3">
+                 <a class="nav-link" href="#" data-th-href="@{/city}">Raw City</a>
+             </li>
+             <li class="nav-item px-3">
                  <a class="nav-link" href="#" data-th-href="@{/map}">Map</a>
+             </li>
+             <li class="nav-item px-3">
+                 <a class="nav-link" href="#" data-th-href="@{/heatmap}">Heatmap</a>
              </li>
           </ul>
         </div>
